--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
     <td><a href="zfzs.html" target="_blank">政府招商</a></td>
   </tr>
   <tr>
-    <td width="150" height="40"><a href="zccz.html" target="_blank">资产处置</a></td>
+    <td width="150" height="40"><a href="zccz.html" target="_blank">资产交易</a></td>
     <td><a href="zindex10.html" target="_blank">首页</a></td>
   </tr>
   <tr>
@@ -39,7 +39,7 @@ body {
     <td><a href="jsz.html" target="_blank">建设中</a></td>
   </tr>
   <tr>
-    <td height="40"><a href="myaccount.html" target="_blank">发布信息</a></td>
+    <td height="40">&nbsp;</td>
     <td><a href="list.html" target="_blank">融资列表页</a></td>
   </tr>
   <tr>
