--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ body {
     <div class="gtxt">
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
+    <td height="40"><a href="index6.html" target="_blank">首页1</a></td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
     <td height="40"><a href="rzzl.html" target="_blank">资料验证</a></td>
     <td><a href="xmrz.html" target="_blank">项目融资</a></td>
   </tr>
