--- a/index.html
+++ b/index.html
@@ -10,76 +10,118 @@ body {
 	font-family:"Microsoft Yahei","宋体" arial;
 }
 .gswap{width:800px; margin:0 auto;}
-.gtxt{border-top:dashed 1px #ccc; border-left:dashed 1px #ccc; width:300px; height:200px; margin:380px 0 0 496px; padding-left:12px; float:left;}
+.gtxt{border-top:dashed 1px #ccc; border-left:dashed 1px #ccc; margin:380px 0 0 496px; padding-left:0px; float:left;}
     .gtxt a:link,.gtxt a:visited{color:red; text-decoration:none;}
 	.gtxt a:active,.gtxt a:hover{color:red; text-decoration:underline;}
-	
-.gtxt1{width:300px; height:200px; margin:380px 0 0 696px; padding-left:12px;}
+
 </style>
 </head>
 
 <body>
 <div class="gswap">
     <div class="gtxt">
-    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+    <table width="500" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td height="40"><a href="index6.html" target="_blank">首页1</a></td>
-    <td>&nbsp;</td>
+    <td width="100" height="40" align="center"><a href="index6.html" target="_blank">首页默认</a></td>
+    <td width="100" align="center">信息发布</td>
+    <td width="100" align="center">选项目</td>
+    <td width="100" align="center">个人中心</td>
+    <td width="100" align="center">通用栏目</td>
   </tr>
   <tr>
-    <td height="40"><a href="rzzl.html" target="_blank">资料验证</a></td>
-    <td><a href="xmrz.html" target="_blank">项目融资</a></td>
+    <td height="40" align="center">注册</td>
+    <td align="center"><a href="rzzl.html" target="_blank">资料验证</a></td>
+    <td align="center"><a href="list.html" target="_blank">融资列表页</a></td>
+    <td align="center"><a href="grzx.html" target="_blank">默认页</a></td>
+    <td align="center"><a href="jsz.html" target="_blank">建设中</a><a href="xmrz.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td height="40"><a href="tzlc.html" target="_blank">投资理财</a></td>
-    <td><a href="zfzs.html" target="_blank">政府招商</a></td>
+    <td height="40" align="center">登陆</td>
+    <td align="center"><a href="xmrz.html" target="_blank">项目融资</a><a href="tzlc.html" target="_blank"></a></td>
+    <td align="center"><a href="ddshz.html" target="_blank">项目调研中</a></td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="aboutus.html" target="_blank">关于我们</a><a href="zfzs.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td width="150" height="40"><a href="zccz.html" target="_blank">资产交易</a></td>
-    <td><a href="zindex10.html" target="_blank">首页</a></td>
+    <td width="150" height="40" align="center"><a href="zccz.html" target="_blank"></a></td>
+    <td align="center"><a href="tzlc.html" target="_blank">投资理财</a><a href="zccz.html" target="_blank"></a></td>
+    <td align="center"><a href="ppz.html" target="_blank">匹配中</a></td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="news.html" target="_blank">新闻列表</a></td>
   </tr>
   <tr>
-    <td height="40"><a href="zindex9.html" target="_blank"></a>   <a href="index1.html" target="_blank">投融资信息列表页</a></td>
-    <td><a href="jsz.html" target="_blank">建设中</a></td>
+    <td height="40" align="center"><a href="zindex9.html" target="_blank"></a>   <a href="index1.html" target="_blank"></a></td>
+    <td align="center"><a href="zfzs.html" target="_blank">政府招商</a></td>
+    <td align="center"><a href="bpcg_bt.html" target="_blank">已解决</a></td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="news-xx.html" target="_blank">新闻详细</a><a href="jsz.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td><a href="list.html" target="_blank">融资列表页</a></td>
+    <td height="40" align="center">&nbsp;</td>
+    <td align="center"><a href="zccz.html" target="_blank">资产交易</a></td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="help.html" target="_blank">帮助中心</a><a href="news-xx.html" target="_blank"></a><a href="list.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td height="40"><a href="ddshz.html" target="_blank">项目调研中</a></td>
-    <td><a href="ppz.html" target="_blank">匹配中</a></td>
+    <td height="40" align="center"><a href="ddshz.html" target="_blank"></a></td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="lcgzs.html" target="_blank">理财工作室</a><a href="ppz.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td height="40"><a href="bpcg_bt.html" target="_blank">已解决</a></td>
-    <td><a href="aboutus.html" target="_blank">关于我们</a></td>
+    <td height="40" align="center"><a href="bpcg_bt.html" target="_blank"></a></td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="aboutus.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td height="40"><a href="news.html" target="_blank">新闻列表</a></td>
-    <td><a href="news-xx.html" target="_blank">新闻详细</a></td>
+    <td height="40" align="center"><a href="news.html" target="_blank"></a></td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="news-xx.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td height="40"><a href="help.html" target="_blank">帮助中心</a><a href="news-xx.html" target="_blank"></a></td>
-    <td><a href="grzx.html" target="_blank">个人中心</a></td>
+    <td height="40" align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="grzx.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td><a href="lcgzs.html" target="_blank">理财工作室</a></td>
-    <td>&nbsp;</td>
+    <td align="center"><a href="lcgzs.html" target="_blank"></a></td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
   </tr>
   <tr>
     <td></td>
     <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
     <td></td>
     <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
+    <td></td>
+    <td></td>
+    <td></td>
     <td></td>
     <td></td>
   </tr>
 </table>
   </div>
+  <blockquote>&nbsp;</blockquote>
 </div>
 
 </body>
