--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
     <td align="center"><a href="xmrz.html" target="_blank">项目融资</a><a href="tzlc.html" target="_blank"></a></td>
     <td align="center"><a href="ddshz.html" target="_blank">项目调研中</a></td>
     <td align="center">&nbsp;</td>
-    <td align="center"><a href="aboutus.html" target="_blank">关于我们</a><a href="zfzs.html" target="_blank"></a></td>
+    <td align="center"><a href="gsjj.html" target="_blank">公司简介</a><a href="zfzs.html" target="_blank"></a></td>
   </tr>
   <tr>
     <td width="150" height="40" align="center"><a href="zccz.html" target="_blank"></a></td>
