--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@ body {
   </tr>
   <tr>
     <td height="40" align="center">注册</td>
-    <td align="center"><a href="rzzl.html" target="_blank">资料验证</a></td>
+    <td align="center"><a href="wszl.html" target="_blank">资料验证</a></td>
     <td align="center"><a href="list.html" target="_blank">融资列表页</a></td>
     <td align="center"><a href="grzx.html" target="_blank">默认页</a></td>
     <td align="center"><a href="jsz.html" target="_blank">建设中</a><a href="xmrz.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td height="40" align="center">登陆</td>
+    <td height="40" align="center"><a href="dl.html" target="_blank">登陆</a></td>
     <td align="center"><a href="xmrz.html" target="_blank">项目融资</a><a href="tzlc.html" target="_blank"></a></td>
-    <td align="center"><a href="ddshz.html" target="_blank">项目调研中</a></td>
+    <td align="center"><a href="xxx.html" target="_blank">项目调研中</a></td>
     <td align="center">&nbsp;</td>
     <td align="center"><a href="gsjj.html" target="_blank">公司简介</a><a href="zfzs.html" target="_blank"></a></td>
   </tr>
   <tr>
-    <td width="150" height="40" align="center"><a href="zccz.html" target="_blank"></a></td>
+    <td width="150" height="40" align="center"><a href="zhmm.html" target="_blank">找回密码</a></td>
     <td align="center"><a href="tzlc.html" target="_blank">投资理财</a><a href="zccz.html" target="_blank"></a></td>
     <td align="center"><a href="ppz.html" target="_blank">匹配中</a></td>
     <td align="center">&nbsp;</td>
