--- a/index.html
+++ b/index.html
@@ -31,44 +31,44 @@ body {
   <tr>
     <td height="40" align="center">注册</td>
     <td align="center"><a href="wszl.html" target="_blank">资料验证</a></td>
-    <td align="center"><a href="list.html" target="_blank">融资列表页</a></td>
-    <td align="center"><a href="grzx.html" target="_blank">默认页</a></td>
-    <td align="center"><a href="jsz.html" target="_blank">建设中</a><a href="xmrz.html" target="_blank"></a></td>
+    <td align="center">融资列表页</td>
+    <td align="center">默认页</td>
+    <td align="center">建设中</td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="dl.html" target="_blank">登陆</a></td>
-    <td align="center"><a href="xmrz.html" target="_blank">项目融资</a><a href="tzlc.html" target="_blank"></a></td>
+    <td align="center">项目融资</td>
     <td align="center"><a href="xxx.html" target="_blank">项目调研中</a></td>
     <td align="center">&nbsp;</td>
     <td align="center"><a href="gsjj.html" target="_blank">公司简介</a><a href="zfzs.html" target="_blank"></a></td>
   </tr>
   <tr>
     <td width="150" height="40" align="center"><a href="zhmm.html" target="_blank">找回密码</a></td>
-    <td align="center"><a href="tzlc.html" target="_blank">投资理财</a><a href="zccz.html" target="_blank"></a></td>
-    <td align="center"><a href="ppz.html" target="_blank">匹配中</a></td>
+    <td align="center">投资理财</td>
+    <td align="center">匹配中</td>
     <td align="center">&nbsp;</td>
-    <td align="center"><a href="news.html" target="_blank">新闻列表</a></td>
+    <td align="center">新闻列表</td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="zindex9.html" target="_blank"></a>   <a href="index1.html" target="_blank"></a></td>
-    <td align="center"><a href="zfzs.html" target="_blank">政府招商</a></td>
-    <td align="center"><a href="bpcg_bt.html" target="_blank">已解决</a></td>
+    <td align="center">政府招商</td>
+    <td align="center">已解决</td>
     <td align="center">&nbsp;</td>
-    <td align="center"><a href="news-xx.html" target="_blank">新闻详细</a><a href="jsz.html" target="_blank"></a></td>
+    <td align="center">新闻详细</td>
   </tr>
   <tr>
     <td height="40" align="center">&nbsp;</td>
-    <td align="center"><a href="zccz.html" target="_blank">资产交易</a></td>
+    <td align="center">资产交易</td>
     <td align="center">&nbsp;</td>
     <td align="center">&nbsp;</td>
-    <td align="center"><a href="help.html" target="_blank">帮助中心</a><a href="news-xx.html" target="_blank"></a><a href="list.html" target="_blank"></a></td>
+    <td align="center">帮助中心</td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="ddshz.html" target="_blank"></a></td>
     <td align="center">&nbsp;</td>
     <td align="center">&nbsp;</td>
     <td align="center">&nbsp;</td>
-    <td align="center"><a href="lcgzs.html" target="_blank">理财工作室</a><a href="ppz.html" target="_blank"></a></td>
+    <td align="center">理财工作室</td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="bpcg_bt.html" target="_blank"></a></td>
