--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ body {
   <tr>
     <td height="40" align="center">注册</td>
     <td align="center"><a href="wszl.html" target="_blank">资料验证</a></td>
-    <td align="center">融资列表页</td>
+    <td align="center"><a href="xxx.html" target="_blank">融资列表页</a></td>
     <td align="center">默认页</td>
     <td align="center">建设中</td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="dl.html" target="_blank">登陆</a></td>
     <td align="center">项目融资</td>
-    <td align="center"><a href="xxx.html" target="_blank">项目调研中</a></td>
+    <td align="center"><a href="dyz.html" target="_blank">项目调研中</a></td>
     <td align="center">&nbsp;</td>
     <td align="center"><a href="gsjj.html" target="_blank">公司简介</a><a href="zfzs.html" target="_blank"></a></td>
   </tr>
