--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@ body {
     <td align="center">投资理财</td>
     <td align="center">匹配中</td>
     <td align="center">&nbsp;</td>
-    <td align="center">新闻列表</td>
+    <td align="center"><a href="news.html" target="_blank">新闻列表</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="zindex9.html" target="_blank"></a>   <a href="index1.html" target="_blank"></a></td>
     <td align="center">政府招商</td>
     <td align="center">已解决</td>
     <td align="center">&nbsp;</td>
-    <td align="center">新闻详细</td>
+    <td align="center"><a href="news-xx.html" target="_blank">新闻详细</a></td>
   </tr>
   <tr>
     <td height="40" align="center">&nbsp;</td>
