--- a/news-xx.html
+++ b/news-xx.html
@@ -7,9 +7,9 @@
 
 </style>
 <body bgcolor="#E2E2E2" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<table width="100%" border="0" cellspacing="0" cellpadding="0" style="background:url(images/news_xx.jpg) no-repeat center center;">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" style="background:url(images/newsxx.jpg) no-repeat center center;">
   <tr>
-    <td width="100%" height="1056">&nbsp;</td>
+    <td width="100%" height="1787">&nbsp;</td>
   </tr>
 </table>
 
