--- a/bzzx.html
+++ b/bzzx.html
@@ -7,9 +7,9 @@
 
 </style>
 <body bgcolor="#E2E2E2" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<table width="100%" border="0" cellspacing="0" cellpadding="0" style="background:url(images/yjj.jpg) no-repeat center center;">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" style="background:url(images/bzxxlist.jpg) no-repeat center center;">
   <tr>
-    <td width="100%" height="1558">&nbsp;</td>
+    <td width="100%" height="1315">&nbsp;</td>
   </tr>
 </table>
 
