--- a/dyz.html
+++ b/dyz.html
@@ -7,7 +7,7 @@
 
 </style>
 <body bgcolor="#E2E2E2" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<table width="100%" border="0" cellspacing="0" cellpadding="0" style="background:url(images/dlz.jpg) no-repeat center center;">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" style="background:url(images/xlist.jpg) no-repeat center center;">
   <tr>
     <td width="100%" height="1362">&nbsp;</td>
   </tr>
