--- a/index.html
+++ b/index.html
@@ -23,79 +23,69 @@ body {
     <table width="500" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td width="100" height="40" align="center"><a href="index6.html" target="_blank">首页默认</a></td>
-    <td width="100" align="center">信息发布</td>
+    <td width="100" align="center"><a href="hyzxx.html" target="_blank">个人中心</a></td>
     <td width="100" align="center">选项目</td>
-    <td width="100" align="center">个人中心</td>
     <td width="100" align="center">通用栏目</td>
   </tr>
   <tr>
     <td height="40" align="center">注册</td>
-    <td align="center"><a href="wszl.html" target="_blank">资料验证</a></td>
+   <td align="center"><a href="zccg.html" target="_blank">资产交易</a></td>
     <td align="center"><a href="xxx.html" target="_blank">融资列表页</a></td>
-    <td align="center">默认页</td>
-    <td align="center">建设中</td>
+    <td align="center"><a href="jsz.html" target="_blank">建设中</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="dl.html" target="_blank">登陆</a></td>
-    <td align="center">项目融资</td>
+    <td align="center"><a href="rzzl.html" target="_blank">项目融资</a></td>
     <td align="center"><a href="dyz.html" target="_blank">项目调研中</a></td>
-    <td align="center">&nbsp;</td>
     <td align="center"><a href="gsjj.html" target="_blank">公司简介</a><a href="zfzs.html" target="_blank"></a></td>
   </tr>
   <tr>
     <td width="150" height="40" align="center"><a href="zhmm.html" target="_blank">找回密码</a></td>
-    <td align="center">投资理财</td>
-    <td align="center">匹配中</td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="tzlc.html" target="_blank">投资理财</a></td>
+    <td align="center"><a href="ppz.html" target="_blank">匹配中</a></td>
     <td align="center"><a href="news.html" target="_blank">新闻列表</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="zindex9.html" target="_blank"></a>   <a href="index1.html" target="_blank"></a></td>
-    <td align="center">政府招商</td>
-    <td align="center">已解决</td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="zfzs.html" target="_blank">政府招商</a></td>
+    <td align="center"><a href="bpcg_bt.html" target="_blank">已解决</a></td>
     <td align="center"><a href="news-xx.html" target="_blank">新闻详细</a></td>
   </tr>
   <tr>
     <td height="40" align="center">&nbsp;</td>
-    <td align="center">资产交易</td>
-    <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
-    <td align="center">帮助中心</td>
+    
+     <td align="center"><a href="wszl.html" target="_blank">资料验证</a></td>
+    <td align="center"><a href="tzlist.html" target="_blank">投资理财列表</a></td>
+    <td align="center"><a href="bzzx.html" target="_blank">帮助中心</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="ddshz.html" target="_blank"></a></td>
     <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
-    <td align="center">理财工作室</td>
+    <td align="center"><a href="tzxx.html" target="_blank">投资理财详情</a></td>
+    <td align="center"><a href="lcgzs.html" target="_blank">理财工作室</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="bpcg_bt.html" target="_blank"></a></td>
     <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
-    <td align="center"><a href="aboutus.html" target="_blank"></a></td>
+    <td align="center"><a href="zfzslis.html" target="_blank">政府招商列表</a></td>
+    <td align="center"><a href="xszy.html" target="_blank">新手指引</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="news.html" target="_blank"></a></td>
     <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="zfzsxx.html" target="_blank">政府招商详情</a></td>
     <td align="center"><a href="news-xx.html" target="_blank"></a></td>
   </tr>
   <tr>
     <td height="40" align="center">&nbsp;</td>
     <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="zclist.html" target="_blank">资产交易列表</a></td>
     <td align="center"><a href="grzx.html" target="_blank"></a></td>
   </tr>
   <tr>
     <td align="center"><a href="lcgzs.html" target="_blank"></a></td>
     <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="zcxx.html" target="_blank">资产交易详情</a></td>
     <td align="center">&nbsp;</td>
   </tr>
   <tr>
@@ -103,17 +93,14 @@ body {
     <td></td>
     <td></td>
     <td></td>
-    <td></td>
   </tr>
   <tr>
     <td></td>
     <td></td>
     <td></td>
     <td></td>
-    <td></td>
   </tr>
   <tr>
-    <td></td>
     <td></td>
     <td></td>
     <td></td>
