--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ body {
   </tr>
   <tr>
     <td height="40" align="center">注册</td>
-   <td align="center"><a href="zccg.html" target="_blank">资产交易</a></td>
+     <td align="center"><a href="wszl.html" target="_blank">资料完善</a></td>
+  
     <td align="center"><a href="xxx.html" target="_blank">融资列表页</a></td>
     <td align="center"><a href="jsz.html" target="_blank">建设中</a></td>
   </tr>
@@ -48,24 +49,24 @@ body {
   <tr>
     <td height="40" align="center"><a href="zindex9.html" target="_blank"></a>   <a href="index1.html" target="_blank"></a></td>
     <td align="center"><a href="zfzs.html" target="_blank">政府招商</a></td>
-    <td align="center"><a href="bpcg_bt.html" target="_blank">已解决</a></td>
+    <td align="center"><a href="yjj.html" target="_blank">已解决</a></td>
     <td align="center"><a href="news-xx.html" target="_blank">新闻详细</a></td>
   </tr>
   <tr>
     <td height="40" align="center">&nbsp;</td>
+     <td align="center"><a href="zccg.html" target="_blank">资产交易</a></td>
     
-     <td align="center"><a href="wszl.html" target="_blank">资料验证</a></td>
     <td align="center"><a href="tzlist.html" target="_blank">投资理财列表</a></td>
     <td align="center"><a href="bzzx.html" target="_blank">帮助中心</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="ddshz.html" target="_blank"></a></td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="xxfbxlist.html" target="_blank">信息发布列表</a></td>
     <td align="center"><a href="tzxx.html" target="_blank">投资理财详情</a></td>
     <td align="center"><a href="lcgzs.html" target="_blank">理财工作室</a></td>
   </tr>
   <tr>
-    <td height="40" align="center"><a href="bpcg_bt.html" target="_blank"></a></td>
+    <td height="40" align="center"><a href="yjj.html" target="_blank"></a></td>
     <td align="center">&nbsp;</td>
     <td align="center"><a href="zfzslis.html" target="_blank">政府招商列表</a></td>
     <td align="center"><a href="xszy.html" target="_blank">新手指引</a></td>
@@ -74,7 +75,7 @@ body {
     <td height="40" align="center"><a href="news.html" target="_blank"></a></td>
     <td align="center">&nbsp;</td>
     <td align="center"><a href="zfzsxx.html" target="_blank">政府招商详情</a></td>
-    <td align="center"><a href="news-xx.html" target="_blank"></a></td>
+    <td align="center"><a href="bzxx.html" target="_blank">帮助详细</a></td>
   </tr>
   <tr>
     <td height="40" align="center">&nbsp;</td>
