--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
     <td width="100" align="center">通用栏目</td>
   </tr>
   <tr>
-    <td height="40" align="center">注册</td>
+    <td height="40" align="center"><a href="zc.html" target="new">注册</a></td>
      <td align="center"><a href="wszl.html" target="_blank">资料完善</a></td>
   
     <td align="center"><a href="xxx.html" target="_blank">融资列表页</a></td>
@@ -44,7 +44,13 @@ body {
     <td width="150" height="40" align="center"><a href="zhmm.html" target="_blank">找回密码</a></td>
     <td align="center"><a href="tzlc.html" target="_blank">投资理财</a></td>
     <td align="center"><a href="ppz.html" target="_blank">匹配中</a></td>
-    <td align="center"><a href="news.html" target="_blank">新闻列表</a></td>
+    <td align="center"><a href="news.html" target="_blank">新闻列表（图）</a></td>
+  </tr>
+  <tr>
+    <td height="40" align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center">&nbsp;</td>
+    <td align="center"><a href="newsx1.html" target="_blank">新闻列表（文）</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="zindex9.html" target="_blank"></a>   <a href="index1.html" target="_blank"></a></td>
@@ -81,13 +87,13 @@ body {
     <td height="40" align="center">&nbsp;</td>
     <td align="center">&nbsp;</td>
     <td align="center"><a href="zclist.html" target="_blank">资产交易列表</a></td>
-    <td align="center"><a href="grzx.html" target="_blank"></a></td>
+    <td align="center"><a href="flsm.html" target="_blank">法律申明</a></td>
   </tr>
   <tr>
     <td align="center"><a href="lcgzs.html" target="_blank"></a></td>
     <td align="center">&nbsp;</td>
     <td align="center"><a href="zcxx.html" target="_blank">资产交易详情</a></td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="fqdc.html" target="_blank">信息反馈</a></td>
   </tr>
   <tr>
     <td></td>
