--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ body {
     <td align="center"><a href="news.html" target="_blank">新闻列表（图）</a></td>
   </tr>
   <tr>
-    <td height="40" align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
+    <td height="40" align="center"><a href="dlh.html" target="_blank">首页登录后</a></td>
+    <td align="center"><a href="grxx.html" target="_blank">个人消息</a></td>
     <td align="center">&nbsp;</td>
     <td align="center"><a href="newsx1.html" target="_blank">新闻列表（文）</a></td>
   </tr>
   <tr>
-    <td height="40" align="center"><a href="zindex9.html" target="_blank"></a>   <a href="index1.html" target="_blank"></a></td>
+    <td height="40" align="center"><a href="zindex9.html" target="_blank"></a>   <a href="syzc.html" target="_blank">首页注册</a></td>
     <td align="center"><a href="zfzs.html" target="_blank">政府招商</a></td>
     <td align="center"><a href="yjj.html" target="_blank">已解决</a></td>
     <td align="center"><a href="news-xx.html" target="_blank">新闻详细</a></td>
@@ -73,43 +73,49 @@ body {
   </tr>
   <tr>
     <td height="40" align="center"><a href="yjj.html" target="_blank"></a></td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="wdrz.html" target="_blank">我的融资</a></td>
     <td align="center"><a href="zfzslis.html" target="_blank">政府招商列表</a></td>
     <td align="center"><a href="xszy.html" target="_blank">新手指引</a></td>
   </tr>
   <tr>
     <td height="40" align="center"><a href="news.html" target="_blank"></a></td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="wdrzxq.html" target="_blank">融资详情</a></td>
     <td align="center"><a href="zfzsxx.html" target="_blank">政府招商详情</a></td>
     <td align="center"><a href="bzxx.html" target="_blank">帮助详细</a></td>
   </tr>
   <tr>
     <td height="40" align="center">&nbsp;</td>
-    <td align="center">&nbsp;</td>
+    <td align="center"><a href="wdtz.html" target="_blank">我的投资</a></td>
     <td align="center"><a href="zclist.html" target="_blank">资产交易列表</a></td>
     <td align="center"><a href="flsm.html" target="_blank">法律申明</a></td>
   </tr>
   <tr>
-    <td align="center"><a href="lcgzs.html" target="_blank"></a></td>
-    <td align="center">&nbsp;</td>
+    <td height="40" align="center"><a href="lcgzs.html" target="_blank"></a></td>
+    <td align="center"><a href="wdtzxq.html" target="_blank">投资详情</a></td>
     <td align="center"><a href="zcxx.html" target="_blank">资产交易详情</a></td>
     <td align="center"><a href="fqdc.html" target="_blank">信息反馈</a></td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
+    <td height="40">&nbsp;</td>
+    <td align="center"><a href="wdzfzs.html" target="_blank">政府招商</a></td>
     <td></td>
     <td></td>
   </tr>
   <tr>
+    <td height="40">&nbsp;</td>
+    <td align="center"><a href="zfzsxq.html" target="_blank">政府招商详情</a></td>
     <td></td>
     <td></td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td align="center"><a href="zcjy.html" target="_blank">资产交易</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td align="center"><a href="zcjyxq.html" target="_blank">资产交易详情</a></td>
     <td></td>
     <td></td>
   </tr>
