--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body {
   <tr>
     <td height="40" align="center"><a href="news.html" target="_blank"></a></td>
     <td align="center"><a href="wdrzxq.html" target="_blank">融资详情</a></td>
-    <td align="center"><a href="zfzsxx.html" target="_blank">政府招商详情</a></td>
+    <td align="center"><a href="zfzsxq.html" target="_blank">政府招商详情</a></td>
     <td align="center"><a href="bzxx.html" target="_blank">帮助详细</a></td>
   </tr>
   <tr>
