--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@ body {
     <td align="center"><a href="news-xx.html" target="_blank">新闻详细</a></td>
   </tr>
   <tr>
-    <td height="40" align="center">&nbsp;</td>
+    <td height="40" align="center"><a href="ibannar1.html" target="_blank">首页bannar1</a></td>
      <td align="center"><a href="zccg.html" target="_blank">资产交易</a></td>
     
     <td align="center"><a href="tzlist.html" target="_blank">投资理财列表</a></td>
     <td align="center"><a href="bzzx.html" target="_blank">帮助中心</a></td>
   </tr>
   <tr>
-    <td height="40" align="center"><a href="ddshz.html" target="_blank"></a></td>
+    <td height="40" align="center"><a href="ibannar2.html" target="_blank">首页bannar2</a></td>
     <td align="center"><a href="xxfbxlist.html" target="_blank">信息发布列表</a></td>
     <td align="center"><a href="tzxx.html" target="_blank">投资理财详情</a></td>
     <td align="center"><a href="lcgzs.html" target="_blank">理财工作室</a></td>
   </tr>
   <tr>
-    <td height="40" align="center"><a href="yjj.html" target="_blank"></a></td>
+    <td height="40" align="center">&nbsp;</td>
     <td align="center"><a href="wdrz.html" target="_blank">我的融资</a></td>
     <td align="center"><a href="zfzslis.html" target="_blank">政府招商列表</a></td>
     <td align="center"><a href="xszy.html" target="_blank">新手指引</a></td>
