--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body {
     <td align="center"><a href="lcgzs.html" target="_blank">理财工作室</a></td>
   </tr>
   <tr>
-    <td height="40" align="center">&nbsp;</td>
+    <td height="40" align="center"><a href="ibannar3.html" target="_blank">首页bannar3</a></td>
     <td align="center"><a href="wdrz.html" target="_blank">我的融资</a></td>
     <td align="center"><a href="zfzslis.html" target="_blank">政府招商列表</a></td>
     <td align="center"><a href="xszy.html" target="_blank">新手指引</a></td>
